<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:gravity="center">


    <LinearLayout
        android:gravity="center"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/museum"/>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WorldSkills Bank"
            android:layout_gravity="center"
            android:textSize="36sp"
            android:textColor="@color/main_color"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_location"
        android:layout_marginTop="50dp"
        android:onClick="onLocationClick"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height"
        android:background="@drawable/button_background"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/banks_location_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:text="@string/button_location_text"
            android:textStyle="bold"
            android:layout_marginStart="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_course"
        android:onClick="onCourseClick"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginStart="25dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/dollar_icon"/>
            <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/button_course_text"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_main_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12.12.2020"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/usd"
                android:textColor="@color/black"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tv_usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="75.5"/>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eur"
                android:textSize="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_eur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="5dp"
                android:text="80.0"
                android:textSize="20dp"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="50dp"
        android:text="@string/login_text"
        android:textSize="20dp"
        android:onClick="onLoginClick"/>

</LinearLayout>